@@ -1,3 +1,5 @@
+* Allow to have more than one possible employee per user
+
 Version 2.2.0 - 2011-10-24
 * Bug fixes (see mercurial logs for details)
 * Add currency name in status bar
